--- a/src/components/Logo/Logo.scss
+++ b/src/components/Logo/Logo.scss
@@ -1,8 +1,11 @@
 @import '../../styles/global.scss';
 
 .bandflix-logo{
+    display: flex;
+    align-items: center;
+    
     &__logo{
+        width: 7.5rem;
         max-height: 1.5625rem;
-        max-width: 7.5rem;
     }
 }
