--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -55,7 +55,7 @@
 }
 
 @mixin mobile-body{
-    font-size: 0.875rem !important;
+    font-size: 0.8125rem !important;
     line-height: 1.125rem !important;
     font-weight: 400 !important;
 }
